<resources>
    <string name="app_name">WordTwist</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="options_fragment">Options Fragment</string>
    <string name="alphabet_list_fragment">Alphabet List Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="select_starting_letter">Select beginning alphabet</string>
    <string name="explore">Explore</string>
    <string name="look_up_words">Show Stored Words</string>
    <string name="switch_layout">Switch Layout</string>
    <string name="no_of_words_unscrambled">%d out of 10 words</string>
    <string name="score">Score: %d</string>
    <string name="submit">submit</string>
    <string name="guess_the_word">Guess the word</string>
    <string name="congratulations">Congratulations!!</string>
    <string name="words_that_begin_with">Words that begin with %s</string>
    <string name="you_scored">You scored %d</string>
    <string name="exit">EXIT</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="confirm_exit">Are you sure you want to exit the game?</string>
    <string name="positive">OK</string>
    <string name="negative">CANCEL</string>
    <string name="skip">SKIP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unscramble_me">unscramble me</string>
    <string name="unscramble_and_form_a_word_using_the_alphabets_given">Unscramble and form a word using the alphabets given.</string>
    <string name="hint">Hint</string>
    <string name="get_word_meaning">Get the definition of the expected word at a cost of 5 pts.</string>
    <string name="choose_hint_options">Get a hint by clicking on any of the options below. Each hint costs 5 pts.</string>
    <string name="definition">DEFINITION</string>
    <string name="first_alphabet">FIRST-LETTER</string>
</resources>