<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.RandomizeAlphabetTwistFragment">

    <TextView
        android:id="@+id/word_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_of_words_unscrambled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"/>


    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:text="@string/score"
        android:textSize="16sp"/>


    <TextView
        android:id="@+id/unscrambled_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/word_count"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="16dp"
        android:text="unscramble me"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Headline3"/>


    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/answer_et_layout"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"
        android:text="Unscramble and form a word using the alphabets given."
        android:textStyle="italic"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/answer_et_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.Unscramble.TextInputLayout.OutlinedBox"
        android:layout_marginTop="100dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/show_hint_iv"
        app:layout_constraintTop_toBottomOf="@id/unscrambled_word">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/answer_et_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:hint="@string/guess_the_word"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/show_hint_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/hint"
        app:layout_constraintStart_toEndOf="@id/answer_et_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/answer_et_layout"
        app:layout_constraintBottom_toBottomOf="@id/answer_et_layout"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        app:srcCompat="@drawable/ic_clue_highlight"/>


    <Button
        android:id="@+id/button_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@id/button_submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/answer_et_layout"/>


    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@id/button_skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/answer_et_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>